style: Fix card spacing when allowRemove is false

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -9,6 +9,9 @@ header
 		align-items: center
 		gap: 10px
 
+.mat-tab-group
+	height: max-content
+
 /* Modal dialogs */
 .form-panel
 	width: calc(100vw - 20px)
