--- a/src/stylesheets/global.sass
+++ b/src/stylesheets/global.sass
@@ -41,8 +41,7 @@ nav
 /* Layout for contract, target, and city cards */
 .card-layout
 	width: max-content
-	max-width: 100%
-
+	max-width: 75vw
 	margin-left: auto
 	margin-right: auto
 
